@@ -20,6 +20,7 @@ source = [
 	"SourceTextCtrl.cpp",
 	"StackLevelClientData.cpp",
 	"StackPanel.cpp",
+	"StickyBreakpoint.cpp",
 	"ToolbarPanel.cpp",
 	"ToolTipWindow.cpp",
 	"WelcomePage.cpp",
